Make some changed to the backend, login works, and set up auth to persist on refresh

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -16,3 +16,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.relative:focus-within label {
+  transform: translate(-0.4rem, -.8rem) scale(0.70);
+}
