--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #141414;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,10 +13,14 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+body {
+  background: #141414;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .relative:focus-within label {
-  transform: translate(-0.4rem, -.8rem) scale(0.70);
+  transform: translate(-0.4rem, -0.8rem) scale(0.7);
 }
