--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -17,6 +17,9 @@
 body {
   background: #141414;
 }
+.modalScrollBar {
+  direction: rtl;
+}
 
 @tailwind base;
 @tailwind components;
@@ -29,25 +32,96 @@ body {
   display: none;
 }
 .card-enter {
-  transform: scale(1);
-  transform-origin: top center;
+  opacity: 1;
 }
 
 .card-enter-active {
-  transform: scale(1.5);
-  transition: transform 500ms ease-in-out;
+  opacity: 1;
 }
 
 .card-exit {
-  transform: scale(1.5);
+  opacity: 1;
 }
 
 .card-exit-active {
-  transform: scale(1);
-  transition: transform 500ms ease-in-out;
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
 }
 @layer components {
   .bannerButton {
     @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+  }
+}
+.Modal {
+  position: fixed;
+  z-index: 200;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 2px #ccc;
+  background-color: white;
+  padding: 10px;
+  text-align: center;
+  box-sizing: border-box;
+  top: 30%;
+  left: 25%;
+  width: 50%;
+  transition: all 0.3s ease-out;
+}
+.ModalOpen {
+  animation: openModal 0.4s ease-out forwards;
+}
+
+.ModalClosed {
+  animation: closeModal 1s ease-out forwards;
+}
+
+.fade-slide-enter {
+  transform: scale(0.5);
+}
+
+.fade-slide-enter-active {
+  opacity: 1;
+  transform-origin: var(--modal-origin-x) var(--modal-origin-y);
+  transform: translateX(0);
+  transition: opacity 300ms, transform 500ms;
+}
+
+.fade-slide-exit {
+  opacity: 1;
+}
+
+.fade-slide-exit-active {
+  opacity: 0;
+  transform-origin: var(--modal-origin-x) var(--modal-origin-y);
+  transform: scale(0);
+  transition: opacity 300ms, transform 500ms;
+}
+
+@keyframes openModal {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(90%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes closeModal {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 0.8;
+    transform: translateY(60%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%);
   }
 }
