--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -32,11 +32,12 @@ body {
   display: none;
 }
 .card-enter {
-  opacity: 1;
+  opacity: 0;
 }
 
 .card-enter-active {
   opacity: 1;
+  transition: opacity 300ms ease-in-out;
 }
 
 .card-exit {
@@ -45,7 +46,7 @@ body {
 
 .card-exit-active {
   opacity: 0;
-  transition: opacity 500ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
 }
 @layer components {
   .bannerButton {
@@ -128,7 +129,7 @@ body {
 
 .player-wrapper {
   position: relative;
-  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
+  padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
 }
 
 .react-player {
