--- a/Backend/app/templates/base.html
+++ b/Backend/app/templates/base.html
@@ -21,22 +21,22 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:5000/api/auth">Home</a>
+            <a class="nav-link" href="https://endflix.onrender.com/api/auth">Home</a>
           </li>
           {% if not logged_in: %}
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:5000/api/auth/login"
+            <a class="nav-link" href="https://endflix.onrender.com/api/auth/login"
               >Login</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:5000/api/auth/register"
+            <a class="nav-link" href="https://endflix.onrender.com/api/auth/register"
               >Register</a
             >
           </li>
           {% endif %}
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:5000/api/auth/logout"
+            <a class="nav-link" href="https://endflix.onrender.com/api/auth/logout"
               >Log Out</a
             >
           </li>
