--- a/Backend/app/templates/index.html
+++ b/Backend/app/templates/index.html
@@ -4,12 +4,12 @@
   <h1>Flask Authentication</h1>
 
   <a
-    href="http://localhost:5000/api/auth/login"
+    href="https://endflix.onrender.com/api/auth/login"
     class="btn btn-primary btn-block btn-large"
     >Login</a
   >
   <a
-    href="http://localhost:5000/api/auth/register"
+    href="https://endflix.onrender.com/api/auth/register"
     class="btn btn-secondary btn-block btn-large"
     >Register</a
   >
